--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,8 @@
-<p>about works!</p>
+<div class="about-root">
+    <div class="about-header">
+        <p>What about it?</p>
+    </div>
+    <div class="about-content">
+
+    </div>
+</div>
