--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,72 @@
 
-<div class="card-container">
 
-    <mat-card *ngFor="let i of items" class="card-item">
-        <img mat-card-image *ngIf="i.image_src" [src]="i.image_src"/>
-        <mat-card-title *ngIf="i.title">
-            {{i.title}}
-        </mat-card-title>
-        <mat-card-content>
-            {{i.text}}
-        </mat-card-content>
-        <mat-card-actions *ngIf="i.actions" align="start">
-            <div style="margin-left: 5px; margin-bottom: 5px;">
-                <div *ngFor="let a of i.actions" style="display: inline-block; margin-right: 7px;">
-                    <!-- All of these IF statements are esentially a switch statement for what kind of button style to use -->
-                    <button *ngIf="(a.style == 'basic') || (a.style == undefined)" mat-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
-                        <span *ngIf="a.label">{{a.label}}</span>
-                        <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
-                    </button>
-                    <button *ngIf="(a.style == 'raised')" mat-raised-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
-                        <span *ngIf="a.label">{{a.label}}</span>
-                        <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
-                    </button>
-                    <button *ngIf="(a.style == 'stroked')" mat-stroked-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
-                        <span *ngIf="a.label">{{a.label}}</span>
-                        <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
-                    </button>
-                    <button *ngIf="(a.style == 'flat')" mat-flat-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
-                        <span *ngIf="a.label">{{a.label}}</span>
-                        <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
-                    </button>
-                    <button *ngIf="(a.style == 'icon')" mat-icon-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
-                        <span *ngIf="a.label">{{a.label}}</span>
-                        <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
-                    </button>
-                    <button *ngIf="(a.style == 'fab')" mat-fab (click)="a.callback ? a.callback($event) : null" [color]="a.color">
-                        <span *ngIf="a.label">{{a.label}}</span>
-                        <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
-                    </button>
-                    <button *ngIf="(a.style == 'minifab')" mat-mini-fab (click)="a.callback ? a.callback($event) : null" [color]="a.color">
-                        <span *ngIf="a.label">{{a.label}}</span>
-                        <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
-                    </button>
+
+<div class="home-root">
+
+    <div class="home-header">
+        <div class="htitle">
+            <h1 class="mat-display-3"><b>Hello!</b></h1>
+        </div>
+        <div class="hcontent">
+            <p>Thanks for visiting my personal website! I've designed, created, and laid out a couple of pages for you to explore using the navigation menu up at the top left. </p>
+            <p>
+                I am a back-end developer at heart, but I hope to become a well versed full-stack developer. This website was designed using <a href="https://angular.io/">Angular 10</a> because of the organized and
+                functional framework it provides. 
+            </p>
+            
+            <div *ngIf="!show_cards">
+                <p>I'd like to share with you some of my core values. Click the button below to see them appear.</p>
+                <div class="home-header-button">
+                    <button mat-stroked-button color="primary" (click)="show_cards = !show_cards;">Explore core values</button>
                 </div>
             </div>
-        </mat-card-actions>
-    </mat-card>
+        </div>
+    </div>
+
+    <div #card_container class="card-container" [@card-trigger]="show_cards ? 'shown' : 'hidden'" *ngIf="show_cards">
+    
+        <!-- Programatticalistically generated mat-cards. Please edit home.component.ts to change the content displayed here. -->
+        <mat-card *ngFor="let i of items" class="card-item">
+            <img mat-card-image *ngIf="i.image_src" [src]="i.image_src"/>
+            <mat-card-title *ngIf="i.title">
+                {{i.title}}
+            </mat-card-title>
+            <mat-card-content style="white-space:pre-line;">{{i.text}}</mat-card-content>
+            <mat-card-actions *ngIf="i.actions" align="start">
+                <div style="margin-left: 5px; margin-bottom: 5px;">
+                    <div *ngFor="let a of i.actions" style="display: inline-block; margin-right: 7px;">
+                        <!-- All of these IF statements are esentially a switch statement for what kind of button style to use -->
+                        <button *ngIf="(a.style == 'basic') || (a.style == undefined)" mat-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
+                            <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
+                            <span *ngIf="a.label">{{a.label}}</span>
+                        </button>
+                        <button *ngIf="(a.style == 'raised')" mat-raised-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
+                            <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
+                            <span *ngIf="a.label">{{a.label}}</span>
+                        </button>
+                        <button *ngIf="(a.style == 'stroked')" mat-stroked-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
+                            <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
+                            <span *ngIf="a.label">{{a.label}}</span>
+                        </button>
+                        <button *ngIf="(a.style == 'flat')" mat-flat-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
+                            <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
+                            <span *ngIf="a.label">{{a.label}}</span>
+                        </button>
+                        <button *ngIf="(a.style == 'icon')" mat-icon-button (click)="a.callback ? a.callback($event) : null" [color]="a.color">
+                            <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
+                            <span *ngIf="a.label">{{a.label}}</span>
+                        </button>
+                        <button *ngIf="(a.style == 'fab')" mat-fab (click)="a.callback ? a.callback($event) : null" [color]="a.color">
+                            <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
+                            <span *ngIf="a.label">{{a.label}}</span>
+                        </button>
+                        <button *ngIf="(a.style == 'minifab')" mat-mini-fab (click)="a.callback ? a.callback($event) : null" [color]="a.color">
+                            <mat-icon *ngIf="a.icon">{{a.icon}}</mat-icon>
+                            <span *ngIf="a.label">{{a.label}}</span>
+                        </button>
+                    </div>
+                </div>
+            </mat-card-actions>
+        </mat-card>
+    </div>
 </div>
