--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,21 +1,49 @@
 .home-root{
     box-sizing: content-box;
-    margin: 6vh 20px 20px 20px;
+    margin: 3vh 6vw 20px 6vw;
     width: auto;
 }
 
-.home-header{
-    width: fit-content;
-    max-width: 900px;
+.picture{
+    background-color: #5c6bc0;
+    border-style: solid;
+    border-width: 7px;
+    border-color: #5c6bc0;
+    border-radius: 50%;
+    box-sizing: border-box;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.picture-wrapper{
+    flex-basis: 70vw;
+    //flex-grow: 1;
+    flex-shrink: 1;
+    height: 70vw;
+    width: 70vw;
+    max-height: 300px;
+    max-width: 300px;
     margin: 0 auto;
+    overflow: hidden;
+    padding: 15px;
 
-    .htitle{
+}
 
-    }
+.home-header{
+    flex-basis: 300px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    width: fit-content;
+    max-width: 700px;
+    margin: 15px auto;
 
-    .hcontent{
-        //text-align: center;
-    }
+}
+
+.home-backing{
+    margin: auto;
+    background-color: #43444a;
+    padding: 20px;
+    max-width: 1000px;
 }
 
 .home-header-button{
@@ -39,4 +67,10 @@
     max-width: 400px;
     margin: 10px 10px;
     flex: 1 1 initial
+}
+
+.image-split{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
