--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="about-root">
     <div class="about-header">
-        <p>What about it?</p>
+        <p><em>More soon...</em></p>
     </div>
     <div class="about-content">
 
