--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -40,6 +40,7 @@
 }
 
 .home-backing{
+    z-index: 2;
     margin: auto;
     background-color: #43444a;
     padding: 20px;
@@ -52,6 +53,7 @@
 }
 
 .card-container{
+    z-index: 1;
     margin: 6vh auto;
     width: fit-content;
     max-width: 1500px;
