--- a/src/app/public/public.component.scss
+++ b/src/app/public/public.component.scss
@@ -26,12 +26,12 @@
 
 .root-container {
   height: 100%;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  // width: 100%;
+  // position: absolute;
+  // left: 0;
+  // right: 0;
+  // top: 0;
+  // bottom: 0;
 
   display: flex;
   flex-direction: column;
@@ -40,9 +40,4 @@
 
 .sidenav {
   height: 100%;
-}
-
-.router-content {
-  height: 100%;
-  overflow: auto;
 }
