--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -3,10 +3,18 @@
     <mat-sidenav-container class="sidenav mat-app-background">
         <mat-sidenav #rootSidenav>
           <div>
-            <mat-nav-list style="height: 100%; width: 200px;">
-              <a mat-list-item routerLink="home">Home</a>
-              <a mat-list-item routerLink="about">About</a>
-            </mat-nav-list>
+            <div>
+              <mat-nav-list style="height: 100%; min-width: 200px;">
+                <a mat-list-item routerLink="home">Home</a>
+                <!-- <a mat-list-item routerLink="about">About</a> -->
+                <a mat-list-item routerLink="resume">Resume</a>
+              </mat-nav-list>
+            </div>
+            <div class="bottom">
+              <mat-nav-list>
+                
+              </mat-nav-list>
+            </div>
           </div>
         </mat-sidenav>
         <mat-sidenav-content class="content-container">
