--- a/src/app/public/public.component.scss
+++ b/src/app/public/public.component.scss
@@ -14,6 +14,10 @@
   .content {
     flex-grow: 1;
     overflow-y: auto;
+    padding: 40px 40px 100px 40px;
+    @media only screen and (min-width: 1200px) {
+      padding: 80px 80px 120px 80px;
+    }
   }
 }
 
